<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="TableLogic" Id="{f635f7ab-4fc0-4104-8ada-04baa1f4a91b}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK TableLogic
VAR
	timer: TOF;
	timerElapsed: BOOL;
	riseTrig: R_TRIG;
	riseTrigDetected: BOOL;
	counter: CTU;
	trigerForTriger: bool;
	timer2: TOF;
	timer2elapsed: bool;
	trigerForTriger2: bool;
	delay: TON;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[riseTrig(CLK := gvl.SwitchPress, Q => riseTrigDetected);
timer(IN := riseTrigDetected, PT := LocalVariables.Recipe.WorkingTime, Q => timerElapsed);

gvl.MotorTableMove := TRUE;

IF riseTrigDetected THEN
	LocalVariables.Locations[3].Item.Id := LocalVariables.Locations[2].Item.Id;
	LocalVariables.Locations[3].Item.Recipe := LocalVariables.Locations[2].Item.Recipe;
	LocalVariables.Locations[2].Item.Id := 0;
	LocalVariables.Locations[2].Item.Recipe := LocalVariables.Recipe;
END_IF

IF timerElapsed THEN
	gvl.PistonPress := TRUE;
	gvl.MotorTableMove := FALSE;
ELSIF NOT gvl.FotocellOutput THEN
	gvl.MotorTableMove := FALSE;
	gvl.PistonPress := FALSE;
ELSE	
	gvl.PistonPress := FALSE;
	gvl.MotorTableMove := TRUE;
END_IF

]]></ST>
    </Implementation>
    <LineIds Name="TableLogic">
      <LineId Id="85" Count="3" />
      <LineId Id="323" Count="0" />
      <LineId Id="322" Count="0" />
      <LineId Id="329" Count="1" />
      <LineId Id="324" Count="0" />
      <LineId Id="326" Count="0" />
      <LineId Id="325" Count="0" />
      <LineId Id="327" Count="0" />
      <LineId Id="89" Count="1" />
      <LineId Id="93" Count="4" />
      <LineId Id="321" Count="0" />
      <LineId Id="99" Count="0" />
      <LineId Id="29" Count="0" />
      <LineId Id="307" Count="0" />
      <LineId Id="294" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>